<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ECUSoftwareUpdateTool</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">ECU升级工具</string>
    <string name="welcome">欢迎使用汽车ECU升级</string>
    <string name="carDiag">在线升级</string>
    <string name="connectDevice">连接设备</string>
    <string name="auxilaryFunction">辅助功能</string>
    <string name="extendFunction">扩展功能</string>
    <string name="driver_filename">驱动文件</string>
    <string name="calibration_filename">标定数据文件</string>
    <string name="app_filename">应用文件</string>
    <string name="update_button">下载</string>
    <string name="title_activity_manufacturer">ManufacturerActivity</string>
    <string name="action_settings">Settings</string>

</resources>
