<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ccccff"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/start_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:layout_weight="1"
        android:text="@string/welcome"
        android:textSize="20sp"
        tools:context=".MainActivity" />

    <TableLayout
        android:id="@+id/MainTableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:stretchColumns="*" >

        <TableRow android:id="@+id/TableRow01" >

            <Button
                android:id="@+id/diagFunction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:drawableTop="@drawable/car"
                android:text="@string/carDiag"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/connectDevice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:drawableTop="@drawable/bluetooth"
                android:text="@string/connectDevice"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow android:id="@+id/TableRow02" >

            <Button
                android:id="@+id/auxilaryFunction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:drawableTop="@drawable/tool"
                android:text="@string/auxilaryFunction"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/extendFunction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:drawableTop="@drawable/extend"
                android:text="@string/extendFunction"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/start_tips"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:textColor="#ff0000"
            android:textSize="20sp" />
        <TextView 
            android:id="@+id/logo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>

</LinearLayout>